# result_parser

./: README.md  pyproject.toml  requirements.txt  setup.py
result_parser/: __init__.py  __main__.py  cli.py  functions.py  test_functions.py
