[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "result_parser"
authors = [{ name="Lukas Kok", email="lukaskok883@gmail.com"}, ]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.6"
dynamic = ["version", "description"]

[project.urls]
Source= "https://github.com/MisterTricky/result_parser.git"
[project.scripts]
result_reader = "result_parser:cli"

[tool.flit.sdist]
include=["LICENSE", "README.md"]